--- a/index.html
+++ b/index.html
@@ -194,10 +194,13 @@
                     </section>
                     <section class="center">
                         <h3>YOUR RATING</h3>
-                        <img src="images/A-rating.png" alt="rating" class="profile-rating">
+                        <img src="" alt="rating" class="profile-rating">
                     </section>
                     <section>
                         <h3>CURRENT JOB</h3>
+                        <section class="current-jobs">
+
+                        </section>
                     </section>
                 </div>
             </section>
@@ -206,11 +209,3 @@
     <script src="app.js"></script>
 </body>
 </html>
-<!-- <svg width="122" height="20" viewBox="0 0 122 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M10 0L12.6803 6.31088L19.5106 6.90983L14.3368 11.4091L15.8779 18.0902L10 14.56L4.12215 18.0902L5.66318 11.4091L0.489435 6.90983L7.3197 6.31088L10 0Z" fill="#FFC93E"/>
-    <path d="M36 0L38.6803 6.31088L45.5106 6.90983L40.3368 11.4091L41.8779 18.0902L36 14.56L30.1221 18.0902L31.6632 11.4091L26.4894 6.90983L33.3197 6.31088L36 0Z" fill="#FFC93E"/>
-    <path d="M61 0L63.6803 6.31088L70.5106 6.90983L65.3368 11.4091L66.8779 18.0902L61 14.56L55.1221 18.0902L56.6632 11.4091L51.4894 6.90983L58.3197 6.31088L61 0Z" fill="#FFC93E"/>
-    <path d="M87 0L89.6803 6.31088L96.5106 6.90983L91.3368 11.4091L92.8779 18.0902L87 14.56L81.1221 18.0902L82.6632 11.4091L77.4894 6.90983L84.3197 6.31088L87 0Z" fill="#FFC93E"/>
-    <path d="M112 0L114.68 6.31088L121.511 6.90983L116.337 11.4091L117.878 18.0902L112 14.56L106.122 18.0902L107.663 11.4091L102.489 6.90983L109.32 6.31088L112 0Z" fill="#FFC93E"/>
-    </svg>
--->
