--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                             <path d="M6.63636 12L3 8.19048L4.27273 6.85714L6.63636 9.33333L11.7273 4L13 5.33333L6.63636 12Z" fill="black"></path>
                                         </svg>
                                         </span>
-                                        <p>Local Jobs</p>
+                                        <p>CSS</p>
                                     </div>
                                     <div class="flexlittle fxs pointer checkboxes" id="" >
                                         <span class="checkbox">
@@ -157,7 +157,7 @@
                                             <path d="M6.63636 12L3 8.19048L4.27273 6.85714L6.63636 9.33333L11.7273 4L13 5.33333L6.63636 12Z" fill="black"></path>
                                         </svg>
                                         </span>
-                                        <p>Featured Jobs</p>
+                                        <p>JavaScript</p>
                                     </div>
                                     <div class="flexlittle fxs pointer checkboxes" id="" >
                                         <span class="checkbox">
@@ -165,7 +165,7 @@
                                             <path d="M6.63636 12L3 8.19048L4.27273 6.85714L6.63636 9.33333L11.7273 4L13 5.33333L6.63636 12Z" fill="black"></path>
                                         </svg>
                                         </span>
-                                        <p>Recruiter Jobs</p>
+                                        <p>HTML</p>
                                     </div>
                                     <div class="flexlittle fxs pointer checkboxes" id="" >
                                         <span class="checkbox">
@@ -173,7 +173,7 @@
                                             <path d="M6.63636 12L3 8.19048L4.27273 6.85714L6.63636 9.33333L11.7273 4L13 5.33333L6.63636 12Z" fill="black"></path>
                                         </svg>
                                         </span>
-                                        <p>Full Time Jobs</p>
+                                        <p>PHP</p>
                                     </div>
                                 </div>
                             </div>
@@ -232,6 +232,27 @@
                 </article>
             </section>
         </main>
+        <!-- TASK COMPLETED -->
+        <section class="task-completed hidden">
+            <article>
+                <h1>TASK COMPLETED</h1>
+                <p>Well done! You have completed your job for NamCorp</p>
+                <img src="images/taskcompleted.png" alt="">
+                <section>
+                    <div>
+                        <h4>Reward For The Task</h4>
+                        <p>$700</p>
+                        <p>XP 40</p>
+                    </div>
+                    <div>
+                        <h4>On Time Bonus</h4>
+                        <p>$50</p>
+                        <p>XP 20</p>
+                    </div>
+                </section>
+                <button>CONTINUE</button>
+            </article>
+        </section>
     </div>
     <script src="app.js"></script>
 </body>
