--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <h2 class="center header"> POPULAR JOBS </h2>
                             <section class="popular-jobs"></section>
                         </section>
-                        <section class="popular-single hidden single">
+                        <section class="popular-single hide-element single">
     
                         </section>
                     </div>
@@ -183,7 +183,7 @@
                             <div class="alljobs"></div>
                         </section>
                     </section>
-                    <section class="jobs-single single hidden">
+                    <section class="jobs-single single hide-element">
     
                     </section>
                 </div>
@@ -192,7 +192,7 @@
                         <h2 class="center header"> FAVORITE JOBS </h2>
                         <section class="favorite-jobs"></section>
                     </div>
-                    <div class="single hidden favorites-single"></div>
+                    <div class="single hide-element favorites-single"></div>
                 </div>
                 <!-- PROFILE SECTION -->
                 <section class="profile-section hide">
@@ -232,7 +232,7 @@
                 </section>
             </main>
             <!-- TASK COMPLETED -->
-            <section class="task-completed hidden">
+            <section class="task-completed hide">
                 <article>
                     <h1>TASK COMPLETED</h1>
                     <p>Well done! You have completed your job for <span class="cap task-company"></span> </p>
