--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                                 <div>
                                     <h5>BUDGET</h5>
                                     <div class="budget">
-                                        <input type="number" name="min" id="min" placeholder="min..." oninput="searchBasedOnBudgets()">
+                                        <input type="number" name="min" id="min" placeholder="min..." >
                                         <span></span>
-                                        <input type="number" name="max" id="max" placeholder="max..." oninput="searchBasedOnBudgets()">
+                                        <input type="number" name="max" id="max" placeholder="max..." >
                                     </div>
                                 </div>
                                 <div>
