--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </section>
             </main>
             <!-- TASK COMPLETED -->
-            <section class="task-completed hide">
+            <section class="task-completed hidetask">
                 <article>
                     <h1>TASK COMPLETED</h1>
                     <p>Well done! You have completed your job for <span class="cap task-company"></span> </p>
