--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <div class="single hide-element favorites-single"></div>
                 </div>
                 <!-- PROFILE SECTION -->
-                <section class="profile-section hide">
+                <section class="profile-section hideprofile">
                     <div class="relative">
                         <svg xmlns="http://www.w3.org/2000/svg" class="close-profile-icon" onclick="closeProfileMenu()" width="21" height="21" viewBox="0 0 21 21" fill="none">
                             <path opacity="0.3" d="M20.3168 2.80602L18.2155 0.704727L10.5107 8.40945L2.80602 0.704727L0.704726 2.80602L8.40945 10.5107L0.704727 18.2155L2.80602 20.3168L10.5107 12.612L18.2155 20.3168L20.3168 18.2155L12.612 10.5107L20.3168 2.80602Z" fill="#4A4A4A"/>
@@ -218,7 +218,7 @@
                     </div>
                 </section>
                 <!-- ADDED TO FAVORITES -->
-                <section class="added-to-favorites hide">
+                <section class="added-to-favorites hideprofile">
                     <article class="flexsmall">
                         <svg xmlns="http://www.w3.org/2000/svg" class="pointer" onclick="cancelAddToFavorites()" width="15" height="15" viewBox="0 0 15 15" fill="none">
                             <path opacity="0.3" d="M13.8096 2.49588L13.9864 2.3191L13.8096 2.14233L12.4851 0.817843L12.3083 0.641066L12.1316 0.817843L7.4519 5.4975L2.77225 0.817843L2.59547 0.641066L2.41869 0.817843L1.09421 2.14233L0.917433 2.3191L1.09421 2.49588L5.77387 7.17554L1.09421 11.8552L0.917433 12.032L1.09421 12.2087L2.41869 13.5332L2.59547 13.71L2.77225 13.5332L7.4519 8.85357L12.1316 13.5332L12.3083 13.71L12.4851 13.5332L13.8096 12.2087L13.9864 12.032L13.8096 11.8552L9.12994 7.17554L13.8096 2.49588Z" fill="#4A4A4A" stroke="#4A4A4A" stroke-width="0.5"/>
